# exo-intel

./:     2  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  run_celery.sh
api/: admin.py  canonical_data_importer.py  filters.py  importer.py  managers.py  models.py  schema.py  serializers.py  urls.py  widgets.py
api/management/commands/: create_nasa_canonical_data.py  import_all_nasa_data.py  import_canonical_data.py  import_nasa_data.py
api/migrations/: 0001_initial.py  0002_rename_equilibrium_temperature_planet_equilibrium_temperature_k_and_more.py
api/templates/planets/: planets.html
api/views/: graphql.py  rest.py  web.py
api_keys/: admin.py  authentication.py  models.py  permissions.py
api_keys/migrations/: 0001_initial.py
config/: celery.py  exception_handler.py  schema.py  settings.py  urls.py
config/settings/: base.py  local.py  production.py
data/: canonical_planet_discoveries.json  canonical_planets.json  canonical_star_systems.json  canonical_stars.json
docker/: entrypoint.sh
planets/: admin.py  filters.py  importer.py  managers.py  models.py  parsers.py  schema.py  serializers.py  simulations.py  tasks.py  urls.py  utils.py  views.py  widgets.py
planets/management/commands/: import_all_nasa_data.py  import_nasa_data.py
planets/migrations/: 0001_initial.py  0002_alter_planet_discovery.py  0003_alter_planet_equilibrium_temperature.py  0004_planet_orbital_eccentricity_star_age_star_luminosity.py  0005_alter_planet_table_alter_planetdiscovery_table_and_more.py
planets/views/: graphql.py  rest.py  simulations.py  web.py
portal/: forms.py  urls.py  views.py
portal/templates/portal/: dashboard.html  login.html  signup.html
portal/templates/portal/partials/: _api_docs.html  _api_explorers.html  _api_key_manager.html  _rest_api_graphql.html  _simulation_lab.html
scripts/: canonical_data_consolidater.py  run_celery.sh
simulations/: apps.py  engine.py  exceptions.py  models.py  serializers.py  urls.py  views.py
simulations/migrations/: 0001_initial.py  0002_alter_simulationrun_simulation_type.py  0003_alter_simulationrun_simulation_type.py
static/js/: portal_dashboard.js
tasks/: exceptions.py  tasks.py  urls.py  views.py
templates/: 404.html  500.html
templates/rest_framework/: api.html
